# histcmp

./: .gitignore  Session.vim  pyproject.toml  test_chi2.py
src/histcmp/: checks.py  cli.py  compare.py  config.py  console.py  icons.py  plot.py  report.py  root_helpers.py
src/histcmp/static/css/: main.css
src/histcmp/templates/: base.html.j2  main.html.j2
tests/: test_chi2test.py  test_comparison.py  test_root_helper.py
