[tool.poetry]
name = "histcmp"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MIT"
packages = [
  { include = "histcmp", from = "src" },
]

[tool.poetry.scripts]
histcmp = 'histcmp.cli:app'

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
typer = "^0.4.0"
wasabi = "^0.9.0"
rich = "^11.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
