[tool.poetry]
name = "histcmp"
version = "0.1.0"
description = ""
authors = ["Paul Gessinger <hello@paulgessinger.com>"]
license = "MIT"
packages = [
  { include = "histcmp", from = "src" },
]

[tool.poetry.scripts]
histcmp = 'histcmp.cli:app'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
typer = "^0.4.0"
wasabi = "^0.9.0"
rich = "^11.0.0"
numpy = "^1.22.1"
Jinja2 = "^3.0.3"
requests = "^2.27.1"
pydantic = "^1.9.0"
emoji = "^1.6.3"
mplhep = "^0.3.20"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
